@@ -1,13 +1,15 @@
 <model>
-    <part name="send_tui" channel="inline" abstraction="operation/plain" model="send">
+    <part name="send" channel="inline" abstraction="operation/plain" model="send">
         <property name="channel" channel="inline" abstraction="text/plain" model="gnu-linux-console"/>
-        <property name="receiver" channel="inline" abstraction="text/plain" model="user"/>
         <property name="message" channel="inline" abstraction="path/knowledge" model=".ui_control.tui.main_window"/>
+        <property name="clean" channel="inline" abstraction="logicvalue/boolean" model="true"/>
     </part>
-    <part name="receive" channel="inline" abstraction="operation/plain" model="receive">
+    <part name="sense" channel="inline" abstraction="operation/plain" model="sense">
+<!--
+        <property name="channel" channel="inline" abstraction="text/plain" model="gnu-linux-console"/>
+-->
         <property name="channel" channel="inline" abstraction="path/knowledge" model=".ui_control.settings.user_interface"/>
-        <property name="commands" channel="inline" abstraction="path/knowledge" model=".ui_control.logic.user_interface.main_window_actions"/>
-        <property name="blocking" channel="inline" abstraction="logicvalue/boolean" model="false"/>
+        <property name="handler" channel="inline" abstraction="path/knowledge" model=".ui_control.logic.handler.handle_gnu_linux_console"/>
     </part>
 </model>
 
@@ -34,6 +36,6 @@
     Cybernetics Oriented Programming (CYBOP) <http://www.cybop.org>
     Christian Heller <christian.heller@tuxtax.de>
 
-    @version $RCSfile: hide_about_information.cybol,v $ $Revision: 1.9 $ $Date: 2009-01-18 02:08:30 $ $Author: christian $
+    @version $RCSfile: hide_about_information.cybol,v $ $Revision: 1.10 $ $Date: 2009-01-28 22:28:43 $ $Author: christian $
     @author Christian Heller <christian.heller@tuxtax.de>
 /-->
