@@ -14,9 +14,12 @@
 # http://www.cybop.net
 # - Cybernetics Oriented Programming -
 #
-# @version $Revision: 1.129 $ $Date: 2009-01-27 23:03:50 $ $Author: christian $
+# @version $Revision: 1.130 $ $Date: 2009-01-28 22:28:43 $ $Author: christian $
 # @author Christian Heller <christian.heller@tuxtax.de>
 #
+
+2009-01-28  Christian Heller  <christian.heller@tuxtax.de>
+        * Investigate signal processing, which does not work reliably
 
 2009-01-27  Christian Heller  <christian.heller@tuxtax.de>
         * Simplify file "checker.c"
